--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Henrique Marques",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "swagger-ui-express": "^4.3.0"
   },
   "dependencies": {
     "express": "^4.17.3"
