--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "swagger-ui-express": "^4.3.0"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongoose": "^6.2.6"
   }
 }
